addUserメソッド修正

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
-    "cSpell.words": [
-        "Firstname",
-        "godotenv",
-        "gonic",
-        "joho",
-        "Lastname",
-        "payedvacation"
-    ]
+  "cSpell.words": [
+    "Albumsgin",
+    "Eevee",
+    "Firstname",
+    "godotenv",
+    "gonic",
+    "Jeru",
+    "joho",
+    "Lastname",
+    "payedvacation",
+    "Snorlax",
+    "tmpl",
+    "Usersgin"
+  ]
 }
